syntax = "proto3";  
 
package hello; // Protobuf package name (distinct from Go package)  
 
// Correct go_package format for Go modules  
option go_package = "github.com/Brady-MacDonald/grpc/proto/hello;hello_proto";  
 
// Example message and service  
message HelloRequest {  
  string name = 1;  
}  
 
message HelloResponse {  
  string message = 1;  
}  
 
service HelloService {  
  rpc SayHello (HelloRequest) returns (HelloResponse);  
}  
